--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,6 +21,7 @@ $color_13: #e4e1e1;
 $color_14: #aaaaaa;
 
 $col_shadow: rgba(7, 7, 7, 0.466);
+$border_color:#747474;
 
 // Colores del form de contacto
 
