--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <title>Crossover.sf Shop</title>
+    <title>Crossover.sf EShop</title>
 </head>
 
 <body class="body_background">
@@ -47,10 +47,6 @@
                         <!-- Menú de navegación principal -->
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <!-- Secciones comentadas -->
-                        <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                        <li><a href="verano.html">Verano</a></li>
-                        <li><a href="novedades.html">Novedades</a></li>-->
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -87,10 +83,7 @@
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
-                            <!-- Secciones comentadas -->
-                            <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                                <li><a href="verano.html">Verano</a></li>
-                                <li><a href="novedades.html">Novedades</a></li>-->
+                            <li><a href="carrito.html">Carrito</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -146,8 +139,8 @@
                     <!-- Enlaces a redes sociales -->
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
-                            class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
+                    <a href="https://wa.me/?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
+                            class="fa-brands fa-whatsapp fa-2xl"></i></i></a>
                 </div>
             </div>
 
