--- a/templates/item.html
+++ b/templates/item.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <title>Crossover.sf Shop</title>
+    <title>Crossover.sf EShop</title>
 </head>
 
 <body class="body_background">
@@ -85,10 +85,7 @@
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
-                            <!-- Secciones comentadas -->
-                            <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                                <li><a href="verano.html">Verano</a></li>
-                                <li><a href="novedades.html">Novedades</a></li>-->
+                            <li><a href="carrito.html">Carrito</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -106,7 +103,7 @@
     </nav>
 
     <!-- Indicador de ruta en la página del item -->
-    <div class="ruteIndicator">Hombre > Camiseta</div>
+    <div class="ruteIndicator text-center">Hombre > Camiseta</div>
 
     <!-- Sección de descripción del producto, precio y calls to action -->
     <div class="Mitem">
@@ -192,8 +189,8 @@
                 <div class="social-links">
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
-                            class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
+                    <a href="https://wa.me/?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
+                            class="fa-brands fa-whatsapp fa-2xl"></i></i></a>
                 </div>
             </div>
 
