--- a/templates/faq.html
+++ b/templates/faq.html
@@ -19,7 +19,7 @@
 
 
 
-    <title>Crossover.sf Shop</title>
+    <title>Crossover.sf EShop</title>
 </head>
 
 <body class="body_background">
@@ -80,9 +80,7 @@
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
-                            <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                            <li><a href="verano.html">Verano</a></li>
-                            <li><a href="novedades.html">Novedades</a></li>-->
+                            <li><a href="carrito.html">Carrito</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -178,8 +176,8 @@
                 <div class="social-links">
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
-                            class="fa-brands fa-whatsapp fa-flip fa-2xl"></i></i></a>
+                    <a href="https://wa.me/?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
+                            class="fa-brands fa-whatsapp fa-2xl"></i></i></a>
                 </div>
             </div>
 
