Agregado de estilos responsive al carrito

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -52,4 +52,6 @@ $font-size-title: 2.2rem;
 $height-card-default: 40vh;
 $height-title-section: 12vh;
 
+$height-carrito-item: 24vh;
+
 $font-size2: 0.9rem;
