--- a/templates/faq.html
+++ b/templates/faq.html
@@ -44,9 +44,7 @@
                             </a></li>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                    <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li>-->
+                        <li><a href="carrito.html">Carrito</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
