Correccion de id duplicados en la pagina del carrito

--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -111,7 +111,7 @@
                 <div class="interactivo-carrito">
                     <div class="input-group" style="width: 150px;">
                         <button class="btn btn-outline-secondary" type="button" id="decrement">−</button>
-                        <input type="text" class="form-control text-center btn-outline-secondary" id="counter" value="0"
+                        <input type="text" class="form-control text-center btn-outline-secondary" id="counter-1" value="0"
                             readonly>
                         <button class="btn btn-outline-secondary" type="button" id="increment">+</button>
                     </div>
@@ -134,7 +134,7 @@
                 <div class="interactivo-carrito">
                     <div class="input-group" style="width: 150px;">
                         <button class="btn btn-outline-secondary" type="button" id="decrement">−</button>
-                        <input type="text" class="form-control text-center btn-outline-secondary" id="counter" value="0"
+                        <input type="text" class="form-control text-center btn-outline-secondary" id="counter-2" value="0"
                             readonly>
                         <button class="btn btn-outline-secondary" type="button" id="increment">+</button>
                     </div>
