--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -8,6 +8,7 @@
   height: $height-large;
   background-color: $color_14;
   @include border;
+  border-color: $color_1 !important;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
