--- a/css/style.css
+++ b/css/style.css
@@ -1923,13 +1923,14 @@ footer a {
   .body-carrito .individuales-carrito .desc-carrito {
     width: 100% !important;
     align-items: center;
-    height: fit-content;
+    height: auto !important;
     padding-bottom: 10px;
+    margin-top: 15px;
   }
   .body-carrito .individuales-carrito .interactivo-carrito {
     width: 80% !important;
     align-items: center;
-    height: fit-content;
+    height: auto !important;
     padding-bottom: 10px;
   }
 }
