--- a/templates/productos.html
+++ b/templates/productos.html
@@ -77,6 +77,7 @@
                             <ul class="dropdown-menu text-bg-dark" aria-labelledby="menuLinksDropdown">
                                 <li><a class="dropdown-item text-white" href="../index.html">Inicio</a></li>
                                 <li><a class="dropdown-item text-white" href="contacto.html">Contacto</a></li>
+                                <li><a class="dropdown-item text-white" href="carrito.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
