--- a/scss/components/_item.scss
+++ b/scss/components/_item.scss
@@ -1,8 +1,12 @@
 @import '../mixins';
 
 .ruteIndicator{
-  background-color: $color_4;
+  background-color: $color_11;
+  color: $color_4;
+  font-weight: bold;
 }
+
+
 
 .item {
   img {
@@ -18,12 +22,35 @@
 .Mitem {
   @include flexbox-item(row, flex-start, stretch, 2rem);
   padding: 5vh 4%;
-  background-color: $color_4;
+  --x-0: 93%;
+    --y-0: 97%;
+    --c-0: hsla(55.58823529411776, 0%, 100%, 0.86);
+    --y-1: 96%;
+    --x-1: 66%;
+    --c-1: hsla(260.735294117647, 85%, 73%, 0.42);
+    --x-2: 10%;
+    --y-2: 93%;
+    --c-2: hsla(181.00000000000003, 85%, 73%, 0.42);
+    --y-3: 94%;
+    --x-3: 48%;
+    --c-3: hsla(181.00000000000003, 85%, 73%, 0.42);
+    --x-4: 52%;
+    --c-4: hsla(252.7941176470588, 85%, 73%, 0);
+    --y-4: 79%;
+    background-color: hsla(198.00000000000063, 14%, 16%, 1);
+    background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)),
+                        radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)),
+                        radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)),
+                        radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)),
+                        radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
+    animation: hero-gradient-animation 10s linear infinite alternate;
+    background-blend-mode: overlay, normal, normal, normal, normal;
 
   .L_Mitem {
     flex: 1.5;
     order: 1;
     padding: 10px;
+    background-color: $color_4;
     @include border-style($color_14, 0.1px, 1%);
 
     .L_Mitem_imgs {
