--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -32,8 +32,7 @@
                 </div>
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                            style="color: #ffffff;"></i></button>
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                 </form>
             </div>
             <div class="abajo">
@@ -83,8 +82,7 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                                    style="color: #ffffff;"></i></button>
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                         </form>
                     </div>
                 </div>
@@ -109,7 +107,7 @@
                     <div class="desc-unidad">Breve descripcion de cualidades</div>
                 </div>
                 <div class="interactivo-carrito">
-                    <div class="input-group" style="width: 150px;">
+                    <div class="input-group">
                         <button class="btn btn-outline-secondary" type="button" id="decrement">−</button>
                         <input type="text" class="form-control text-center btn-outline-secondary" id="counter-1" value="0"
                             readonly>
@@ -132,7 +130,7 @@
                     <div class="desc-unidad">Breve descripcion de cualidades</div>
                 </div>
                 <div class="interactivo-carrito">
-                    <div class="input-group" style="width: 150px;">
+                    <div class="input-group">
                         <button class="btn btn-outline-secondary" type="button" id="decrement">−</button>
                         <input type="text" class="form-control text-center btn-outline-secondary" id="counter-2" value="0"
                             readonly>
