--- a/templates/faq.html
+++ b/templates/faq.html
@@ -32,8 +32,7 @@
                 </div>
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                            style="color: #ffffff;"></i></button>
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                 </form>
             </div>
             <div class="abajo">
@@ -85,8 +84,7 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                                    style="color: #ffffff;"></i></button>
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                         </form>
                     </div>
                 </div>
