--- a/scss/components/_search-box.scss
+++ b/scss/components/_search-box.scss
@@ -1,4 +1,5 @@
 @import '../mixins';
+@import '../variables';
 
 .search-box {
   @include flexbox-search(flex-start, center, 5px);
@@ -11,5 +12,9 @@
 
   button {
     @include button-style;
+
+    i {
+      color: $color_4;
+    }
   }
 }
