--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -33,8 +33,7 @@
                 <!-- Formulario de búsqueda -->
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                            style="color: #ffffff;"></i></button>
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                 </form>
             </div>
             <div class="abajo">
@@ -90,8 +89,7 @@
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                                    style="color: #ffffff;"></i></button>
+                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                         </form>
                     </div>
                 </div>
