--- a/templates/productos.html
+++ b/templates/productos.html
@@ -31,8 +31,7 @@
                 </div>
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
-                            style="color: #ffffff;"></i></button>
+                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
                 </form>
             </div>
             <div class="abajo">
@@ -84,7 +83,7 @@
 
                     <div class="filter-body-sm">
                         <h2>Filtros</h2>
-                        <div class="filter-group1" style="width: 100%; display: flex; gap: 10px;">
+                        <div class="filter-group1">
                             <div class="filter-dropdown-talle">
                                 <select class="form-select" id="size" aria-label="Selecciona tu talle">
                                     <option selected>Talle</option>
@@ -112,8 +111,7 @@
                                     value="500">
                             </div>
                         </div>
-                        <div class="filter-group2"
-                            style="width: 100%; display: flex; gap: 10px; align-items: center; justify-content: space-between;">
+                        <div class="filter-group2">
                             <div class="filter-stock">
                                 <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
                                 <label class="btn btn-outline-light" for="btncheck1">En Stock</label>
@@ -196,7 +194,7 @@
     <div class="container">
         <div class="d-flex flex-wrap justify-content-center gap-3">
             <!-- Card 1 -->
-            <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
+            <div class="card col-12 col-md-6 col-lg-4 col-xl-3 prod-card">
                 <img src="../assets/img/Camisas de fibrana/Talle M.jpg" class="card-img-top product-img"
                     alt="Camisa-de-fibrana">
                 <div class="card-body d-flex flex-column">
@@ -208,7 +206,7 @@
                 </div>
             </div>
             <!-- Card 2 -->
-            <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
+            <div class="card col-12 col-md-6 col-lg-4 col-xl-3 prod-card">
                 <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE FREEDOM LILA.png"
                     class="card-img-top product-img" alt="Remera-freedom">
                 <div class="card-body d-flex flex-column">
@@ -220,7 +218,7 @@
                 </div>
             </div>
             <!-- Card 3 -->
-            <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
+            <div class="card col-12 col-md-6 col-lg-4 col-xl-3 prod-card">
                 <img src="../assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top product-img"
                     alt="Musculosa-cosmic">
                 <div class="card-body d-flex flex-column">
@@ -232,7 +230,7 @@
                 </div>
             </div>
             <!-- Card 4 -->
-            <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
+            <div class="card col-12 col-md-6 col-lg-4 col-xl-3 prod-card">
                 <img src="../assets/img/Camisas de fibrana/Talle XL.jpg" class="card-img-top product-img"
                     alt="Camisa-de-fibrana">
                 <div class="card-body d-flex flex-column">
@@ -244,7 +242,7 @@
                 </div>
             </div>
             <!-- Card 5 -->
-            <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
+            <div class="card col-12 col-md-6 col-lg-4 col-xl-3 prod-card">
                 <img src="../assets/img/Bermudas/Bermuda de jean.png" class="card-img-top product-img"
                     alt="Bermuda-de-jean">
                 <div class="card-body d-flex flex-column">
