--- a/templates/productos.html
+++ b/templates/productos.html
@@ -184,7 +184,7 @@
 
             <!-- Boton de busqueda usando los filtros -->
             <div class="filter-search">
-                <button type="button" class="btn btn-primary">Buscar</button>
+                <button type="button" class="btn btn-primary color-btn">Buscar</button>
             </div>
         </div>
     </div>
@@ -202,7 +202,7 @@
                     <hr>
                     <h5 class="card-title">$18,900</h5>
                     <hr>
-                    <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
+                    <a href="item.html" class="btn btn-primary mt-auto color-btn">Ver más</a>
                 </div>
             </div>
             <!-- Card 2 -->
@@ -214,7 +214,7 @@
                     <hr>
                     <h5 class="card-title">$15,000</h5>
                     <hr>
-                    <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
+                    <a href="item.html" class="btn btn-primary mt-auto color-btn">Ver más</a>
                 </div>
             </div>
             <!-- Card 3 -->
@@ -226,7 +226,7 @@
                     <hr>
                     <h5 class="card-title">$12,600</h5>
                     <hr>
-                    <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
+                    <a href="item.html" class="btn btn-primary mt-auto color-btn">Ver más</a>
                 </div>
             </div>
             <!-- Card 4 -->
@@ -238,7 +238,7 @@
                     <hr>
                     <h5 class="card-title">$16,780</h5>
                     <hr>
-                    <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
+                    <a href="item.html" class="btn btn-primary mt-auto color-btn">Ver más</a>
                 </div>
             </div>
             <!-- Card 5 -->
@@ -250,7 +250,7 @@
                     <hr>
                     <h5 class="card-title">$20,300</h5>
                     <hr>
-                    <a href="item.html" class="btn btn-primary mt-auto">Ver más</a>
+                    <a href="item.html" class="btn btn-primary mt-auto color-btn">Ver más</a>
                 </div>
             </div>
         </div>
