--- a/templates/productos.html
+++ b/templates/productos.html
@@ -76,7 +76,7 @@
                             <ul class="dropdown-menu text-bg-dark" aria-labelledby="menuLinksDropdown">
                                 <li><a class="dropdown-item text-white" href="../index.html">Inicio</a></li>
                                 <li><a class="dropdown-item text-white" href="contacto.html">Contacto</a></li>
-                                <li><a class="dropdown-item text-white" href="carrito.html">Contacto</a></li>
+                                <li><a class="dropdown-item text-white" href="carrito.html">Carrito</a></li>
                             </ul>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                             <p class="filter-txt">Rango de precios</p>
                             <div class="filter-prize-range">
                                 <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10"
-                                    value="500">
+                                    value="1000">
                             </div>
                         </div>
                         <div class="filter-group2">
@@ -166,7 +166,7 @@
             <div class="filter-prize">
                 <p class="filter-txt text-white">Rango de precios</p>
                 <div class="filter-prize-range d-flex align-items-center">
-                    <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10" value="500">
+                    <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10" value="999">
                 </div>
             </div>
 
