--- a/scss/components/_search-box.scss
+++ b/scss/components/_search-box.scss
@@ -7,11 +7,12 @@
 
   input {
     @include input-style;
-    height: 26px
+    height: 40px
   }
 
   button {
     @include button-style;
+    height: 43px;
 
     i {
       color: $color_4;
