--- a/templates/item.html
+++ b/templates/item.html
@@ -29,11 +29,22 @@
                 <div class="nombre_head">
                     <p>Crossover.sf</p>
                 </div>
-                <!-- Formulario de búsqueda -->
-                <form class="search-box" action="/buscar" method="get">
-                    <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                    <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
-                </form>
+
+                <div class="buttons-nav">
+                    <!-- Formulario de búsqueda -->
+                    <form class="search-box" action="/buscar" method="get">
+                        <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
+                        <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"></i></button>
+                    </form>
+                    <button type="button" class="btn btn-primary position-relative color-btn carrito-btn"
+                        onclick="window.location.href='carrito.html'">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span
+                            class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                            <span class="visually-hidden">New alerts</span>
+                        </span>
+                    </button>
+                </div>
             </div>
             <div class="abajo">
                 <!-- Menú de navegación -->
@@ -60,12 +71,22 @@
             <div class="nombre_head">
                 <p>Crossover.sf</p>
             </div>
-            <!-- Botón para abrir el menú lateral en pantallas pequeñas -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+
+            <div class="buttons-nav">
+                <button type="button" class="btn btn-primary position-relative" onclick="window.location.href='carrito.html'">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span
+                        class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                        <span class="visually-hidden">New alerts</span>
+                    </span>
+                </button>
+                <!-- Botón para abrir el menú lateral en pantallas pequeñas -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
@@ -156,11 +177,15 @@
         <div class="L_Mitem">
             <div class="L_Mitem_imgs">
                 <div class="L_Mitem_imgs_extras">
-                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE MOON NEGRA.png" alt="Remera_oversize_negra">
-                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE SMILE BLANCA.png" alt="Remera_oversize_blanca">
-                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE NEW GALAXY VERDE.png" alt="Remera_oversize_verde">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE MOON NEGRA.png"
+                        alt="Remera_oversize_negra">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE SMILE BLANCA.png"
+                        alt="Remera_oversize_blanca">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE NEW GALAXY VERDE.png"
+                        alt="Remera_oversize_verde">
                 </div>
-                <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png" alt="Remeron oversize"></div>
+                <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png"
+                        alt="Remeron oversize"></div>
             </div>
             <div class="L_Mitem_txt">
                 <h2><a href="">Detalles</a></h2>
