Agregado de iconos y tooltips al boton de eliminar del carrito

--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -134,7 +134,9 @@
                             value="0" readonly>
                         <button class="btn btn-outline-secondary" type="button" id="increment">+</button>
                     </div>
-                    <button type="button" class="btn btn-danger eliminar-item">Eliminar</button>
+                    <button type="button" class="btn btn-danger eliminar-item" data-bs-toggle="tooltip" title="Eliminar">
+                        <i class="fa-solid fa-trash-can" style="color: #ffffff;"></i>
+                    </button>
                 </div>
             </div>
             <!-- segundo producto -->
@@ -157,7 +159,10 @@
                             value="0" readonly>
                         <button class="btn btn-outline-secondary" type="button" id="increment">+</button>
                     </div>
-                    <button type="button" class="btn btn-danger eliminar-item">Eliminar</button>
+                    <button type="button" class="btn btn-danger eliminar-item" data-bs-toggle="tooltip" title="Eliminar">
+                        <i class="fa-solid fa-trash-can" style="color: #ffffff;"></i>
+                    </button>
+                    
                 </div>
             </div>
         </div>
